[package]
name = "kvdump"
version = "0.1.0"
edition = "2021"
authors = ["stackinspector"]
license = "MPL-2.0"
repository = "https://github.com/Berylsoft/kvdump"
description = "A straightforward and compact key-value or scope-key-value binary file format for Berylsoft projects."

[lib]
name = "kvdump"
path = "lib.rs"

[dependencies]
bytes = { version = "1", optional = true }
blake3 = "1"
foundations = { git = "https://github.com/Berylsoft/foundations", features = ["num-enum", "usize-casting", "error-enum"] }
actor-core = { git = "https://github.com/Berylsoft/actor", optional = true }

[features]
actor = ["actor-core"]
bytes = ["dep:bytes"]
