[package]
name = "async-kvdump"
version = "0.1.0"
edition = "2021"
authors = ["stackinspector"]
license = "MPL-2.0"
repository = "https://github.com/Berylsoft/kvdump"
description = "A straightforward and compact key-value or scope-key-value binary file format for Berylsoft projects."

[lib]
name = "async_kvdump"
path = "lib.rs"

[dependencies]
kvdump = { path = ".." }
tokio = { version = "1", default-features = false, features = ["rt", "sync"] }
